[Qt] Fix compilation with RVCT 4 https://bugs.webkit.org/show_bug.cgi?id=37727

Reviewed by Kenneth Rohde Christiansen.

Swap extern and declspec to fix visibility of symbol imported from QtGui.

* page/qt/EventHandlerQt.cpp:

Canonical link: https://commits.webkit.org/49537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58257 268f45cc-cd09-0410-ab3c-d52691b4dbfc